--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.9",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1"
     },
