--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME="Laravel Base"
+APP_NAME="BaseBackend"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_LOCALE=en
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -12,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,7 +28,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
+MAIL_HOST=localhost
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
@@ -48,14 +49,16 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SOCIALITE_ENABLED=true
+DEBUGBAR_ENABLED=true
 
-GOOGLE_LOGIN_ENABLED=true
+SOCIALITE_ENABLED=false
+
+GOOGLE_LOGIN_ENABLED=false
 GOOGLE_CLIENT_ID=626300340968-fip45j3v8dpbup7mi8oelu9muvicrco9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=pvAMRPVdb5IXqQaTH8_QBi7B
 GOOGLE_REDIRECT=http://127.0.0.1:8000/oauth/google/callback
 
-GITHUB_LOGIN_ENABLED=true
+GITHUB_LOGIN_ENABLED=false
 GITHUB_CLIENT_ID=957c47a45fa408db8967
 GITHUB_CLIENT_SECRET=33b96ba216268501ef0815d963049f2aebe6ea03
 GITHUB_REDIRECT=http://127.0.0.1:8000/oauth/github/callback
