--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.9",
         "laravel/socialite": "^5.2",
@@ -28,7 +29,7 @@
         "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
-        "knuckleswtf/scribe": "^2.5",
+        "knuckleswtf/scribe": "^3.0",
         "laracasts/generators": "^2.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
