--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -20,14 +20,14 @@ endpoints:
         name: username
         description: 'The user''s name'
         required: false
-        example: doloremque
+        example: eius
         type: string
         custom: []
       password:
         name: password
         description: 'The user''s password'
         required: false
-        example: excepturi
+        example: est
         type: string
         custom: []
     responses:
@@ -38,6 +38,7 @@ endpoints:
             "message": "Successful",
             "data": {
               "user": {
+                "id": 23,
                 "name": "User",
                 "username": "User",
                 "email": "user@example.com",
@@ -83,6 +84,7 @@ endpoints:
           {
             "message": "Successful",
             "data": {
+              "id": 23,
               "name": "User",
               "username": "User",
               "email": "user@example.com",
@@ -114,35 +116,35 @@ endpoints:
         name: name
         description: 'The new user''s name'
         required: false
-        example: aut
+        example: rerum
         type: string
         custom: []
       username:
         name: username
         description: 'The new user''s username'
         required: false
-        example: veniam
+        example: consequatur
         type: string
         custom: []
       email:
         name: email
         description: 'The new user''s email'
         required: false
-        example: quas
+        example: officiis
         type: string
         custom: []
       password:
         name: password
         description: 'The password'
         required: false
-        example: reprehenderit
+        example: aut
         type: string
         custom: []
       password_confirmation:
         name: password_confirmation
         description: 'The password again'
         required: false
-        example: debitis
+        example: ipsa
         type: string
         custom: []
     responses:
@@ -152,6 +154,7 @@ endpoints:
           {
             "message": "Successful",
             "data": {
+              "id": 23,
               "name": "User",
               "username": "User",
               "email": "user@example.com",
@@ -183,7 +186,7 @@ endpoints:
         name: username
         description: 'The user''s username or email'
         required: false
-        example: facere
+        example: rerum
         type: string
         custom: []
     responses:
@@ -193,6 +196,7 @@ endpoints:
           {
             "message": "Successful",
             "data": {
+              "id": 23,
               "name": "User",
               "username": "User",
               "email": "user@example.com",
@@ -235,6 +239,7 @@ endpoints:
           {
             "message": "Successful",
             "data": {
+              "id": 23,
               "name": "User",
               "username": "User",
               "email": "user@example.com",
@@ -267,21 +272,21 @@ endpoints:
         name: existing_password
         description: 'The existing password'
         required: false
-        example: optio
+        example: consectetur
         type: string
         custom: []
       password:
         name: password
         description: 'The new password'
         required: false
-        example: distinctio
+        example: eum
         type: string
         custom: []
       password_confirmation:
         name: password_confirmation
         description: 'The new password again'
         required: false
-        example: laudantium
+        example: sequi
         type: string
         custom: []
     responses:
@@ -291,6 +296,7 @@ endpoints:
           {
             "message": "Successful",
             "data": {
+              "id": 23,
               "name": "User",
               "username": "User",
               "email": "user@example.com",
@@ -323,21 +329,21 @@ endpoints:
         name: name
         description: 'The user''s name'
         required: false
-        example: adipisci
+        example: perferendis
         type: string
         custom: []
       username:
         name: username
         description: 'The user''s username'
         required: false
-        example: ea
+        example: recusandae
         type: string
         custom: []
       email:
         name: email
         description: 'The user''s email'
         required: false
-        example: explicabo
+        example: nostrum
         type: string
         custom: []
     responses:
@@ -347,6 +353,7 @@ endpoints:
           {
             "message": "Successful",
             "data": {
+              "id": 23,
               "name": "User",
               "username": "User",
               "email": "user@example.com",
@@ -358,4 +365,22 @@ endpoints:
           }
         headers: []
         description: '200'
+    responseFields: []
+  -
+    httpMethods:
+      - POST
+    uri: api/auth/logout
+    metadata:
+      title: ''
+      description: ''
+      authenticated: true
+      custom: []
+    headers:
+      Authorization: 'Bearer {YOUR_AUTH_KEY}'
+      Content-Type: application/json
+      Accept: application/json
+    urlParameters: []
+    queryParameters: []
+    bodyParameters: []
+    responses: []
     responseFields: []
