Update github keys

--- a/.env.example
+++ b/.env.example
@@ -56,9 +56,9 @@ SOCIALITE_ENABLED=false
 GOOGLE_LOGIN_ENABLED=false
 GOOGLE_CLIENT_ID=626300340968-fip45j3v8dpbup7mi8oelu9muvicrco9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=pvAMRPVdb5IXqQaTH8_QBi7B
-GOOGLE_REDIRECT=http://127.0.0.1:8000/oauth/google/callback
+GOOGLE_REDIRECT=http://basebackend.localtest.me/oauth/google/callback
 
 GITHUB_LOGIN_ENABLED=false
-GITHUB_CLIENT_ID=957c47a45fa408db8967
-GITHUB_CLIENT_SECRET=33b96ba216268501ef0815d963049f2aebe6ea03
-GITHUB_REDIRECT=http://127.0.0.1:8000/oauth/github/callback
+GITHUB_CLIENT_ID=8fe8345853438e3d204c
+GITHUB_CLIENT_SECRET=f29f55fe331541c9a7bb8d3e5c9185ea8350eb4f
+GITHUB_REDIRECT=http://basebackend.localtest.me/oauth/github/callback
