--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,3 @@
 {
-    "/css/style.css": "/css/style.css?id=e5fdf4d72ec121631ed2"
+    "/css/style.css": "/css/style.css?id=a7d287eb76693bef290fb7b41f217ed2"
 }
