--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,6 @@
 {
-    "/css/style.css": "/css/style.css?id=de082db66b1bee1862466e4262a50141"
+    "/css/style.css": "/css/style.css?id=3c2bfde4ed4d25512d5fd00af59ae534",
+    "/css/list.min.css": "/css/list.min.css?id=37fb73e8ac4a6cace365a47d1b5ea6e5",
+    "/js/bundle.min.js": "/js/bundle.min.js?id=28efb27fa22a73119510b019cdcf942c",
+    "/js/list.min.js": "/js/list.min.js?id=97a160fa5f081d84cbb738587ab63d44"
 }
