--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/socialite": "*",
         "laravel/tinker": "^2.5",
         "laravolt/avatar": "^6.0",
+        "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
         "prologue/alerts": "^1.2",
         "spatie/laravel-permission": "^6.0"
