--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_LOCALE=en
+APP_LOCALE=ms_MY
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_USERNAME=web
+DB_PASSWORD=web
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
