--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/dbal": "^3.8",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^3.0",
+        "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.3",
         "laravel/sanctum": "^4.0",
